tests/data/string/indexof/negative/Char.fs
open System
"foo".IndexOf('f')
